[gd_scene load_steps=4 format=3 uid="uid://c1xc2vs4locvu"]

[ext_resource type="Script" uid="uid://dxfpq87ug4hwd" path="res://Scripts/Shop.gd" id="1_a0mxf"]
[ext_resource type="PackedScene" uid="uid://dtwfejpx0siil" path="res://Scenes/tattoo_shop_item.tscn" id="2_io27d"]
[ext_resource type="PackedScene" uid="uid://bojs75ufi7qte" path="res://Scenes/artifact_shop_item.tscn" id="3_io27d"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_a0mxf")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="ShopContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.5
offset_top = -350.0
offset_right = 462.5
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MoneyDisplay" type="HBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MoneyIcon" type="Label" parent="ShopContainer/MoneyDisplay"]
layout_mode = 2
text = "$$$$"

[node name="MoneyLabel" type="Label" parent="ShopContainer/MoneyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.878431, 0.0862745, 1)
text = "0"

[node name="TattooSection" type="VBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TattooContainer" type="HBoxContainer" parent="ShopContainer/TattooSection"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TattooSlot1" parent="ShopContainer/TattooSection/TattooContainer" instance=ExtResource("2_io27d")]
layout_mode = 2

[node name="TattooSlot2" parent="ShopContainer/TattooSection/TattooContainer" instance=ExtResource("2_io27d")]
layout_mode = 2

[node name="TattooSlot3" parent="ShopContainer/TattooSection/TattooContainer" instance=ExtResource("2_io27d")]
layout_mode = 2

[node name="TattooSlot4" parent="ShopContainer/TattooSection/TattooContainer" instance=ExtResource("2_io27d")]
layout_mode = 2

[node name="TattooSlot5" parent="ShopContainer/TattooSection/TattooContainer" instance=ExtResource("2_io27d")]
layout_mode = 2

[node name="ArtifactSection" type="VBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ArtifactContainer" type="HBoxContainer" parent="ShopContainer/ArtifactSection"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ArtifactSlot1" parent="ShopContainer/ArtifactSection/ArtifactContainer" instance=ExtResource("3_io27d")]
layout_mode = 2

[node name="ArtifactSlot2" parent="ShopContainer/ArtifactSection/ArtifactContainer" instance=ExtResource("3_io27d")]
layout_mode = 2

[node name="ArtifactSlot3" parent="ShopContainer/ArtifactSection/ArtifactContainer" instance=ExtResource("3_io27d")]
layout_mode = 2

[node name="ClearToothButton" type="Button" parent="ShopContainer/ArtifactSection/ArtifactContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Clear    Tooth   -   10    gold"

[node name="TeethSection" type="VBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TeethGrid" type="GridContainer" parent="ShopContainer/TeethSection"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 48)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -71.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
text = "Continue Game"
